@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6123 2004/06/04 12:29:57 salo Exp $
+$NetBSD: CHANGES,v 1.6124 2004/06/04 14:05:53 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2774,3 +2774,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated xosd to 2.2.7 [xtraeme 2004-06-04]
 	Updated ddd to 3.3.8 [shannonjr 2004-06-04]
 	Updated xmms-osd to 2.2.7 [xtraeme 2004-06-04]
+	Updated squirrelmail to 1.4.3a [xtraeme 2004-06-04]
